Discord Style Overlay
This is a possible solution, where we basically just set the native window flags manually to prevent the overlay from stealing alt-tab when they tab out of the game.